// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides the icon 1`] = `
<div>
  <a
    data-testid="item-link"
    href="/link"
    style="text-decoration: none;"
  >
    <div
      class="sc-bdVaJa fyMwNk"
    >
      <div>
        <span
          class="sc-bxivhb dMHcoS"
          data-testid="item-heading"
        >
          HEADING
        </span>
        <p
          class="sc-ifAKCX bEJvBp"
          data-testid="item-description"
        >
          DESCRIPTION
        </p>
        <p
          class="sc-EHOje knEcdQ"
          data-testid="item-info"
        >
          INFO
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <a
    data-testid="item-link"
    href="/link"
    style="text-decoration: none;"
  >
    <div
      class="sc-bdVaJa fyMwNk"
    >
      <div
        class="sc-htpNat imfYua"
        data-testid="item-icon-container"
      >
        <svg
          data-testid="item-icon"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="width: 2.5rem; color: rgb(61, 72, 82);"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="16"
            rx="2"
            ry="2"
            width="22"
            x="1"
            y="4"
          />
          <line
            x1="1"
            x2="23"
            y1="10"
            y2="10"
          />
        </svg>
      </div>
      <div>
        <span
          class="sc-bxivhb dMHcoS"
          data-testid="item-heading"
        >
          HEADING
        </span>
        <p
          class="sc-ifAKCX bEJvBp"
          data-testid="item-description"
        >
          DESCRIPTION
        </p>
        <p
          class="sc-EHOje knEcdQ"
          data-testid="item-info"
        >
          INFO
        </p>
      </div>
    </div>
  </a>
</div>
`;
